--- a/Draw/Dice/View/DiceSettingView/DiceSettingView.xib
+++ b/Draw/Dice/View/DiceSettingView/DiceSettingView.xib
@@ -41,7 +41,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="937784318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="889012136"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="775592760">
@@ -60,7 +59,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 12}, {234, 137}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="566736714"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="713976561">
@@ -75,7 +73,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{91, 39}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="864811469"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
@@ -88,6 +85,7 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
+								<reference key="IBUISelectedTitleColor" ref="566338797"/>
 								<reference key="IBUINormalTitleColor" ref="775592760"/>
 								<object class="NSColor" key="IBUINormalTitleShadowColor" id="519780770">
 									<int key="NSColorSpace">3</int>
@@ -101,13 +99,13 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">settingleft_unselect@2x.png</string>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="246560568">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="419181507">
 									<int key="type">2</int>
-									<double key="pointSize">15</double>
+									<double key="pointSize">16</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="51499377">
+								<object class="NSFont" key="IBUIFont" id="200879936">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">15</double>
+									<double key="NSSize">16</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
@@ -116,7 +114,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{91, 93}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="720099629"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
@@ -126,36 +123,20 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUINormalTitle">ON</string>
 								<reference key="IBUIHighlightedTitleColor" ref="566338797"/>
+								<reference key="IBUISelectedTitleColor" ref="566338797"/>
 								<reference key="IBUINormalTitleColor" ref="775592760"/>
 								<reference key="IBUINormalTitleShadowColor" ref="519780770"/>
 								<reference key="IBUISelectedBackgroundImage" ref="354760116"/>
 								<reference key="IBUINormalBackgroundImage" ref="273670209"/>
-								<reference key="IBUIFontDescription" ref="246560568"/>
-								<reference key="IBUIFont" ref="51499377"/>
+								<reference key="IBUIFontDescription" ref="419181507"/>
+								<reference key="IBUIFont" ref="200879936"/>
 							</object>
 							<object class="IBUIImageView" id="312623812">
 								<reference key="NSNextResponder" ref="889012136"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 89}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="450398201"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<reference key="IBUIBackgroundColor" ref="713976561"/>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">music_on@2x.png</string>
-								</object>
-							</object>
-							<object class="IBUIImageView" id="290649107">
-								<reference key="NSNextResponder" ref="889012136"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{23, 35}, {40, 37}}</string>
-								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="943783445"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -165,13 +146,26 @@
 									<string key="NSResourceName">audio_on@2x.png</string>
 								</object>
 							</object>
+							<object class="IBUIImageView" id="290649107">
+								<reference key="NSNextResponder" ref="889012136"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{23, 35}, {40, 37}}</string>
+								<reference key="NSSuperview" ref="889012136"/>
+								<reference key="NSNextKeyView" ref="943783445"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<reference key="IBUIBackgroundColor" ref="713976561"/>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">music_on@2x.png</string>
+								</object>
+							</object>
 							<object class="IBUIButton" id="720099629">
 								<reference key="NSNextResponder" ref="889012136"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{147, 93}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -180,6 +174,7 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUINormalTitle">OFF</string>
 								<reference key="IBUIHighlightedTitleColor" ref="566338797"/>
+								<reference key="IBUISelectedTitleColor" ref="566338797"/>
 								<reference key="IBUINormalTitleColor" ref="775592760"/>
 								<reference key="IBUINormalTitleShadowColor" ref="519780770"/>
 								<object class="NSCustomResource" key="IBUISelectedBackgroundImage" id="1041978130">
@@ -190,15 +185,14 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">settingright_unselect@2x.png</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="246560568"/>
-								<reference key="IBUIFont" ref="51499377"/>
+								<reference key="IBUIFontDescription" ref="419181507"/>
+								<reference key="IBUIFont" ref="200879936"/>
 							</object>
 							<object class="IBUIButton" id="864811469">
 								<reference key="NSNextResponder" ref="889012136"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{147, 39}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="312623812"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
@@ -208,19 +202,19 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUINormalTitle">OFF</string>
 								<reference key="IBUIHighlightedTitleColor" ref="566338797"/>
+								<reference key="IBUISelectedTitleColor" ref="566338797"/>
 								<reference key="IBUINormalTitleColor" ref="775592760"/>
 								<reference key="IBUINormalTitleShadowColor" ref="519780770"/>
 								<reference key="IBUISelectedBackgroundImage" ref="1041978130"/>
 								<reference key="IBUINormalBackgroundImage" ref="991642292"/>
-								<reference key="IBUIFontDescription" ref="246560568"/>
-								<reference key="IBUIFont" ref="51499377"/>
+								<reference key="IBUIFontDescription" ref="419181507"/>
+								<reference key="IBUIFont" ref="200879936"/>
 							</object>
 							<object class="IBUIButton" id="566736714">
 								<reference key="NSNextResponder" ref="889012136"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{220, 0}, {27, 27}}</string>
 								<reference key="NSSuperview" ref="889012136"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="290649107"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="713976561"/>
@@ -236,13 +230,12 @@
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">dice_close_btn@2x.png</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="246560568"/>
-								<reference key="IBUIFont" ref="51499377"/>
+								<reference key="IBUIFontDescription" ref="419181507"/>
+								<reference key="IBUIFont" ref="200879936"/>
 							</object>
 						</array>
 						<string key="NSFrame">{{37, 132}, {247, 157}}</string>
 						<reference key="NSSuperview" ref="937784318"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="556222993"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="713976561"/>
@@ -252,7 +245,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="985781082"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="713976561"/>
@@ -324,6 +316,14 @@
 						<reference key="destination" ref="312623812"/>
 					</object>
 					<int key="connectionID">30</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">closeButton</string>
+						<reference key="source" ref="937784318"/>
+						<reference key="destination" ref="566736714"/>
+					</object>
+					<int key="connectionID">31</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -465,12 +465,16 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="10.CustomClassName">FontButton</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="2" key="10.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
+				<string key="13.CustomClassName">FontButton</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="2" key="13.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
+				<string key="14.CustomClassName">FontButton</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="2" key="14.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
+				<string key="15.CustomClassName">FontButton</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="28.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -479,6 +483,7 @@
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="9.CustomClassName">FontButton</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="2" key="9.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 			</dictionary>
@@ -486,78 +491,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">30</int>
+			<int key="maxID">31</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">DiceSettingView</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="audioImageView">UIImageView</string>
-						<string key="audioOffButton">UIButton</string>
-						<string key="audioOnButton">UIButton</string>
-						<string key="bgImageView">UIImageView</string>
-						<string key="musicImageView">UIImageView</string>
-						<string key="musicOffButton">UIButton</string>
-						<string key="musicOnButton">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="audioImageView">
-							<string key="name">audioImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="audioOffButton">
-							<string key="name">audioOffButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="audioOnButton">
-							<string key="name">audioOnButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bgImageView">
-							<string key="name">bgImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="musicImageView">
-							<string key="name">musicImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="musicOffButton">
-							<string key="name">musicOffButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="musicOnButton">
-							<string key="name">musicOnButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiceSettingView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
