--- a/Draw/Controller/Home/Menu/DiceMenu~ipad.xib
+++ b/Draw/Controller/Home/Menu/DiceMenu~ipad.xib
@@ -39,7 +39,7 @@
 					<object class="IBUIButton" id="8335921">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{18, 0}, {134, 134}}</string>
+						<string key="NSFrameSize">{384, 234}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="271388425"/>
@@ -76,7 +76,7 @@
 					<object class="IBUILabel" id="158890679">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 134}, {170, 57}}</string>
+						<string key="NSFrame">{{0, 177}, {384, 57}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -87,8 +87,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">我要猜</string>
 						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAAA</bytes>
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">1</int>
@@ -96,18 +96,18 @@
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">26</double>
+							<double key="pointSize">25</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">26</double>
+							<double key="NSSize">25</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
 					<object class="IBUIButton" id="271388425">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{119, 9}, {50, 50}}</string>
+						<string key="NSFrame">{{210, 64}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="158890679"/>
@@ -135,7 +135,7 @@
 						</object>
 					</object>
 				</array>
-				<string key="NSFrameSize">{169, 191}</string>
+				<string key="NSFrameSize">{384, 234}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="8335921"/>
@@ -272,7 +272,7 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="dice_start@2x.png">{16, 16}</string>
+			<string key="dice_start@2x.png">{120, 120}</string>
 			<string key="number@2x.png">{50, 45}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
